update gmail and name

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="home-content">
         <div>
           <div class="text-two">
-            <div class="text-three">Hi, I am Alejandro Avila Mata</div>
+            <div class="text-three">Hi, I am Maksym Meliukh</div>
             <br />
             <h4 class="span loader">
               <span class="m">S</span>
@@ -1091,7 +1091,7 @@
             <a
               href="mailTo: clarence64robertsrus@outlook.com?Subject=I'd like to have a interview with you."
               style="text-decoration: underline; color: white"
-              >mataavilaalejandro@gmail.com</a
+              >mmeliukh71@gmail.com</a
             >
           </p>
         </div>
