--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="home-content">
         <div>
           <div class="text-two">
-            <div class="text-three">Hi, I am Maksym Meliukh</div>
+            <div class="text-three">Hi, I am Bohdan Drzod</div>
             <br />
             <h4 class="span loader">
               <span class="m">S</span>
@@ -142,7 +142,7 @@
           Dedicated and efficient full stack developer with 4+ years experience
           in application layers, presentation layers, and databases. Strong
           skills in both F/E and B/E technologies. Spearheaded successful
-          transition from LAMP stack to MEAN which cut latency by 40% and
+          transition from LAMP stack to MERN which cut latency by 40% and
           increased effectiveness of database administrators by 20%. Seeking to
           further improve my React.js, Vue.js and Express.js skills as the full
           stack developer at future company.
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="box circle">
-            <div class="topic">Wordpress</div>
+            <div class="topic">Python</div>
             <div class="orange">
               <div class="progress" style="background: transparent">
                 <div class="inner">
@@ -269,14 +269,14 @@
             <p>
               9 years of experience in Web development. <br />
               - Strong HTML + CSS, SCSS, Tailwind CSS, TypeScript<br />
-              - Node.js, express, hapi, Nest<br />
+              - Node.js, Express, FastAPI, DJango<br />
               - React, Redux, React Hooks, Next, React Native<br />
               - Apollo, GraphQL, Firebase<br />
-              - MongoDB, mongoose, postgreSQL, MySQL<br />
-              - codeigniter, Laravel<br />
+              - MongoDB, PostgreSQL, MySQL<br />
+              - Codeigniter, Laravel<br />
               - Responsive Web design<br />
               - Chrome extension, bot development with NodeJS and Python<br />
-              - Restful, API integration, headless<br />
+              - RESTful, API integration, headless<br />
               - Socket programming, socket.io, websocket<br />
               - AWS services, Git, Bitbucket<br />
               - Jira, Agile
@@ -321,7 +321,7 @@
               - 3D Animation with Three.js and WebGL<br />
               - Graphic animation with Canvas<br />
               - SVG graphic animation design<br />
-              - parallx scroll animation<br />
+              - Parallx scroll animation<br />
               - ParticlesJS, GreenSockJS and so on.
             </p>
             <a onClick="showWork('animation')" title="Web Animations"
@@ -1091,7 +1091,7 @@
             <a
               href="mailTo: clarence64robertsrus@outlook.com?Subject=I'd like to have a interview with you."
               style="text-decoration: underline; color: white"
-              >mmeliukh71@gmail.com</a
+              >vuongtpv@gmail.com</a
             >
           </p>
         </div>
@@ -1116,9 +1116,9 @@
           <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
           <p>
             <a
-              href="https://t.me/serhiishvab86"
+              href="https://t.me/softdev629"
               target="_blank"
-              title="https://t.me/serhiishvab86"
+              title="https://t.me/softdev629"
               style="text-decoration: underline; color: white"
             >
               Telegram
@@ -1129,9 +1129,9 @@
           <p><i class="fa fa-skype w3-xxlarge w3-text-light-grey"></i></p>
           <p>
             <a
-              href="https://join.skype.com/invite/CjRJbzgryTiO"
+              href="https://join.skype.com/invite/lTuBjhHzutth"
               target="_blank"
-              title="https://join.skype.com/invite/CjRJbzgryTiO"
+              title="https://join.skype.com/invite/lTuBjhHzutth"
               style="text-decoration: underline; color: white"
             >
               Skype
