--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <br />
           </div>
           <div class="text-four">
-            Specialized in React | ChatGPT & Langchain | Python Developer
+            React, Python, Web3 | Trading, NLP | LLM Specialist
           </div>
         </div>
       </div>
