--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         style="display: flex; justify-content: center; opacity: 0.9"
       >
         <img
-          data-src="./assets/images/me.jpg"
+          data-src="./assets/images/me.jpeg"
           class="avatar lazy"
           style="min-height: 300px; min-width: 300px; margin: 10px"
         />
