--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
         style="display: flex; justify-content: center; opacity: 0.9"
       >
         <img
-          data-src="./assets/images/me.jpeg"
           class="avatar lazy"
           style="min-height: 300px; min-width: 300px; margin: 10px"
         />
@@ -1091,7 +1090,7 @@
             <a
               href="mailTo: clarence64robertsrus@outlook.com?Subject=I'd like to have a interview with you."
               style="text-decoration: underline; color: white"
-              >vuongtpv@gmail.com</a
+              >drozd.dev@outlook.com</a
             >
           </p>
         </div>
@@ -1103,9 +1102,9 @@
           <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
           <p>
             <a
-              href="tel:+380730385611"
+              href="tel:+48575702819"
               target="_blank"
-              title="tel:+380730385611"
+              title="tel:+48575702819"
               style="text-decoration: underline; color: white"
             >
               Phone Number
@@ -1129,9 +1128,9 @@
           <p><i class="fa fa-skype w3-xxlarge w3-text-light-grey"></i></p>
           <p>
             <a
-              href="https://join.skype.com/invite/lTuBjhHzutth"
+              href="https://join.skype.com/K9AqnMRXy2Nf"
               target="_blank"
-              title="https://join.skype.com/invite/lTuBjhHzutth"
+              title="https://join.skype.com/K9AqnMRXy2Nf"
               style="text-decoration: underline; color: white"
             >
               Skype
