update: change name

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="home-content">
         <div>
           <div class="text-two">
-            <div class="text-three">Hi, I am Bohdan Drzod</div>
+            <div class="text-three">Hi, I am Bonvi</div>
             <br />
             <h4 class="span loader">
               <span class="m">S</span>
