update: address update

--- a/index.html
+++ b/index.html
@@ -1088,10 +1088,9 @@
           <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
           <p>
             <a
-              href="mailTo: clarence64robertsrus@outlook.com?Subject=I'd like to have a interview with you."
+              href="mailTo:domenik.brenner1@gmx.de?Subject=I'd like to have a interview with you."
               style="text-decoration: underline; color: white"
-              >drozd.dev@outlook.com</a
-            >
+              >domenik.brenner1@gmx.de</a>
           </p>
         </div>
         <div class="w3-col l4">
@@ -1102,9 +1101,9 @@
           <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
           <p>
             <a
-              href="tel:+48575702819"
+              href="tel:+4915736572499"
               target="_blank"
-              title="tel:+48575702819"
+              title="tel:+4915736572499"
               style="text-decoration: underline; color: white"
             >
               Phone Number
